json tagging error...?

--- a/pubssite/templates/test.mustache
+++ b/pubssite/templates/test.mustache
@@ -14,9 +14,9 @@ $(document).ready(function () {
   $(document.body).append('hello here is some citation <br />');
   
   var person = {
-    title: "Herr Doktor Professor", 
-    firstname: "Don",
-    lastname: "Johnson"
+    "title" : "Herr Doktor Professor", 
+    "firstname": "Don",
+    "lastname": "Johnson"
    };
   
   console.log(person);
